--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
 
+@font-face {
+    font-family: Etch-a-Sketch;
+    src: url(./fonts/jack_simba/Jack\ Simba\ -\ Personal\ Use.otf) ;
+
+}
+
+:root{
+    --mainBorderColor : #ff80ab;
+    --titleColor:#fdd835;
+    --backgroundColor: #e5ffff;
+    --headerBgdColor: #1976d2;
+}
 .grid{
     width: auto;
     box-sizing: border-box;
+    border: #e0e0e0 0.1px solid;
 }
 
 /* .grid:hover{
@@ -10,13 +23,35 @@
 
 body{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    background-color: var(--backgroundColor);
+    margin: 0;
+    padding: 0;
 }
 
-#main{
+#header{
     display: flex;
     justify-content: center;
+    background-color: var(--headerBgdColor);
+}
+
+h2{
+    font-family: Etch-a-Sketch;
+    font-size: 100px;
+    margin-bottom:10px;
+    color: var(--titleColor);
+    text-shadow: -5px 0 black, 0 5px black, 5px 0 black, 0 -5px black;
+}
+.aux{
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+    
+}
+#main{
+    display: flex;
     align-items: center;
     flex-direction: column;
     max-width: 1100px;
@@ -31,6 +66,7 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     max-width: 600px;
     max-height: 600px;
@@ -40,6 +76,6 @@ body{
     padding: 0;
     margin: 0;
     box-sizing:content-box;
-    border: 50px solid ;
+    border: 50px solid var(--mainBorderColor);
     border-radius: 25px;
 }
