--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --titleColor:#fdd835;
     --backgroundColor: #e5ffff;
     --headerBgdColor: #1976d2;
+    --buttonBgdColor: #ffffa8;
 }
 .grid{
     width: auto;
@@ -31,10 +32,14 @@ body{
     padding: 0;
 }
 
-#header{
+.bars{
+    
     display: flex;
     justify-content: center;
     background-color: var(--headerBgdColor);
+}
+#header{
+    margin-top: -50px;
 }
 
 h2{
@@ -78,4 +83,48 @@ h2{
     box-sizing:content-box;
     border: 50px solid var(--mainBorderColor);
     border-radius: 25px;
+}
+
+
+
+/* BOTONES-------------------------- */
+#option{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    gap: 30px;
+}
+
+button{
+    border: solid var(--mainBorderColor);
+    width: 100px;
+    height: 50px;
+    border-radius: 10px;
+
+    font-size: 20px;
+    font-weight: bold;
+
+    cursor: pointer;
+    background-color: var(--buttonBgdColor);
+}
+
+button:active{
+    transform: scale(0.9);
+}
+
+button:hover{
+    box-shadow:0px 5px 15px var(--mainBorderColor);
+    
+}
+
+footer{
+    margin-bottom: 0;
+    margin-top: 50px;
+    height: 55px;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    color: var(--titleColor);
+    font-weight: bold;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
